--- a/frontend/src/app/layout/purchase/add-purchase/add-purchase.component.html
+++ b/frontend/src/app/layout/purchase/add-purchase/add-purchase.component.html
@@ -1,5 +1,5 @@
 <div class="main-header">
-    <h1 mat-dialog-title><b>Add Purchase</b> </h1>
+    <h1 mat-dialog-title><b> {{ !this.data.id ? 'Add Purchase' : 'Update Purchase' }}</b> </h1>
     <button mat-button mat-dialog-close>
         <mat-icon>close</mat-icon>
     </button>
@@ -155,7 +155,7 @@
             <div class="width">
                 <mat-form-field>
                     <mat-label>Total Qty</mat-label>
-                    <input matInput disable matTooltip="Not Editable" readonly value={{this.Qty}} />
+                    <input matInput disable matTooltip="Not Editable"  value={{this.Qty}} />
                 </mat-form-field>
             </div>
             <div class="width">
@@ -169,14 +169,14 @@
             <div class="width">
                 <mat-form-field>
                     <mat-label>Total (₹)</mat-label>
-                    <input matInput disable matTooltip="Not Editable" readonly
+                    <input matInput disable matTooltip="Not Editable"
                         value="{{this.totalPrice  | currency: 'INR'}}" />
                 </mat-form-field>
             </div>
             <div class="width">
                 <mat-form-field>
                     <mat-label>Last Bill Due (₹)</mat-label>
-                    <input matInput disable matTooltip="Not Editable" readonly
+                    <input matInput disable matTooltip="Not Editable"
                         value="{{this.lastBillDue  | currency: 'INR'}}" />
                 </mat-form-field>
             </div>
@@ -193,24 +193,25 @@
             <div class="width">
                 <mat-form-field>
                     <mat-label>Grand Total (₹) </mat-label>
-                    <input matInput disable matTooltip="Not Editable" readonly
-                        value="{{this.grandDueTotal  | currency: 'INR'}}" />
+                    <input matInput disable matTooltip="Not Editable"
+                    [(ngModel)]="grandDueTotal"
+                        />
                 </mat-form-field>
             </div>
             <div class="width">
 
                 <mat-form-field>
                     <mat-label>payment(₹) </mat-label>
-                    <input matInput disable (keyup)="totalDueCount()" [(ngModel)]="currentPayment"
-                        value={{this.currentPayment}} />
+                    <input matInput disable (keyup)="totalPaymentToDueCount()" [(ngModel)]="currentPayment"
+                   />
                 </mat-form-field>
                 <br>
                 <ng-container>
 
                     <mat-form-field>
                         <mat-label>Other Payment (₹) </mat-label>
-                        <input matInput disable (keyup)="totalDueCount()" [(ngModel)]="otherPayment"
-                            value={{this.otherPayment}} />
+                        <input matInput disable (keyup)="totalOtherToDueCount()" [(ngModel)]="otherPayment"
+                             />
                     </mat-form-field>
                 </ng-container>
             </div>
@@ -227,7 +228,8 @@
             <div class="right">
                 <mat-form-field>
                     <mat-label>Total Due (₹) </mat-label>
-                    <input matInput disable matTooltip="Not Editable" readonly
+                    <input matInput disable matTooltip="Not Editable"
+                    [(ngModel)]="totalDue"
                         value="{{this.totalDue | currency: 'INR'}}" />
                 </mat-form-field>
             </div>
@@ -235,7 +237,7 @@
             <div class="">
                 <button mat-raised-button color="primary" (click)="savePurchase()">
                     <span *ngIf="!isShowLoader">
-                        Save & Rack
+                        {{ !this.data.id ? 'Save & Back' : 'Update & Back' }}
                     </span>
                     <mat-spinner *ngIf="isShowLoader" diameter="20"></mat-spinner>
                 </button>
