--- a/frontend/src/app/layout/transfer/add-transfer/add-transfer.component.html
+++ b/frontend/src/app/layout/transfer/add-transfer/add-transfer.component.html
@@ -13,15 +13,16 @@
         <!-- Date start -->
         <mat-form-field color="accent">
             <mat-label>Date</mat-label>
-            <input matInput formControlName="date" [matDatepicker]="date" [max]="currentDate" required>
+            <input matInput formControlName="transferDate" [matDatepicker]="date" [max]="currentDate"
+                [(ngModel)]="currentDate" value="  date: 'dd/mm/yyy'" required>
             <mat-datepicker-toggle matSuffix [for]="date"></mat-datepicker-toggle>
             <mat-datepicker #date></mat-datepicker>
         </mat-form-field>
 
         <div>
             <ng-container *ngIf="
-        formGroup.controls.date.touched &&
-        !formGroup.controls.date.value
+        formGroup.controls.transferDate.touched &&
+        !formGroup.controls.transferDate.value
       ">
                 <span class="error">Date is Required</span>
             </ng-container>
@@ -31,7 +32,7 @@
         <!-- Description start -->
         <mat-form-field>
             <mat-label>Description</mat-label>
-            <textarea matInput formControlName="description" required ></textarea>
+            <textarea matInput formControlName="description" required></textarea>
         </mat-form-field>
         <div>
             <ng-container *ngIf="
@@ -45,7 +46,7 @@
         <!-- Amount start -->
         <mat-form-field>
             <mat-label>Amount</mat-label>
-            <input matInput formControlName="amount" type="number" required/>
+            <input matInput formControlName="amount" type="number" min="0" required />
         </mat-form-field>
         <div>
             <ng-container *ngIf="
@@ -60,7 +61,7 @@
         <!-- user start -->
         <mat-form-field>
             <mat-label>User To</mat-label>
-            <mat-select formControlName="user" name="user" required>
+            <mat-select formControlName="toUserId" name="toUserId" required>
                 <mat-option *ngFor="let user of users" [value]="user.id">
                     {{user.user_name}}
                 </mat-option>
@@ -68,8 +69,8 @@
         </mat-form-field>
         <div>
             <ng-container *ngIf="
-          formGroup.controls.user.touched &&
-          !formGroup.controls.user.value
+          formGroup.controls.toUserId.touched &&
+          !formGroup.controls.toUserId.value
         ">
                 <span class="error">User is Required</span>
 
