--- a/frontend/src/app/layout/transfer/transfer.component.html
+++ b/frontend/src/app/layout/transfer/transfer.component.html
@@ -9,6 +9,10 @@
             <button color="primary" class="margin btn" mat-raised-button (click)="getTransfer()">
                 Search
             </button>
+            <button color="primary" class="margin btn" mat-raised-button
+                (click)="tableParams.search = ''; getTransfer()">
+                Clear Search
+            </button>
             <button color="primary" class="margin btn" mat-raised-button (click)="onAddNewUser()">
                 Add Transfer
             </button>
@@ -26,10 +30,10 @@
     <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="id"
             matSortDirection="asc">
-            <ng-container matColumnDef="date">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
+            <ng-container matColumnDef="transferDate">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Transfer Date</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.date | date : 'medium'}}
+                    {{ element.transferDate | date : 'medium'}}
                 </td>
             </ng-container>
             <ng-container matColumnDef="description">
@@ -44,25 +48,47 @@
                     {{ element.amount | currency: 'INR' }}
                 </td>
             </ng-container>
-            <ng-container matColumnDef="user_name">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>User</th>
-                <td mat-cell *matCellDef="let element">{{ element.user }}</td>
+            <ng-container matColumnDef="fromUserName">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>From User</th>
+                <td mat-cell *matCellDef="let element">{{ element.fromUserName }}</td>
             </ng-container>
-            <ng-container matColumnDef="to">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>To</th>
-                <td mat-cell *matCellDef="let element">{{ element.user_name }}</td>
+            <ng-container matColumnDef="toUserName">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>To User</th>
+                <td mat-cell *matCellDef="let element">{{ element.toUserName }}</td>
             </ng-container>
+
+            <ng-container matColumnDef="isApproved">
+                <th mat-header-cell *matHeaderCellDef>Approve</th>
+                <td mat-cell *matCellDef="let element">
+                    <ng-container *ngIf="element.isActive">
+                        <button *ngIf="!element.isApproved && !(element.fromUserId == loggedInUserId)" mat-icon-button
+                            matTooltip="Click here to approve" color="primary" type="button"
+                            (click)="onApproved(element.transferId)">
+                            <mat-icon aria-label="thumb_up">thumb_up</mat-icon>
+                        </button>
+
+                        <button *ngIf="element.isApproved" mat-icon-button class="green">
+                            <mat-icon>check</mat-icon>
+                        </button>
+                    </ng-container>
+                </td>
+            </ng-container>
+
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
-                    <button *ngIf="tableParams.active" mat-icon-button matTooltip="Click to Edit" color="primary"
-                        type="button" (click)="onEditNewUser(element)">
-                        <mat-icon aria-label="Edit">edit</mat-icon>
-                    </button>
-                    <button mat-icon-button matTooltip="{{tableParams.active? 'Click to de-active': 'Click to Active'}}"
-                        color="{{tableParams.active? 'warn': 'primary'}}" (click)="changeStatus(element.id)">
-                        <mat-icon aria-label="Delete">{{tableParams.active? 'visibility_off': 'visibility'}}</mat-icon>
-                    </button>
+                    <ng-container *ngIf="(element.fromUserId == loggedInUserId)">
+                        <button *ngIf="element.isActive && !element.isApproved" mat-icon-button
+                            matTooltip="Click to Edit" color="primary" type="button" (click)="onEditNewUser(element)">
+                            <mat-icon aria-label="Edit">edit</mat-icon>
+                        </button>
+                        <button mat-icon-button *ngIf="!element.isApproved"
+                            matTooltip="{{element.isActive? 'Click to de-active': 'Click to Active'}}"
+                            color="{{element.isActive? 'warn': 'primary'}}" (click)="changeStatus(element.transferId)">
+                            <mat-icon aria-label="Delete">{{element.isActive? 'visibility_off': 'visibility'}}
+                            </mat-icon>
+                        </button>
+                    </ng-container>
                 </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
