--- a/frontend/src/app/layout/transfer/add-transfer/add-transfer.component.html
+++ b/frontend/src/app/layout/transfer/add-transfer/add-transfer.component.html
@@ -10,25 +10,6 @@
 <div class="container">
     <form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
 
-        <!-- Date start -->
-        <mat-form-field color="accent">
-            <mat-label>Date</mat-label>
-            <input matInput formControlName="transferDate" [matDatepicker]="date" [max]="currentDate"
-                [(ngModel)]="currentDate" value="  date: 'dd/mm/yyy'" required>
-            <mat-datepicker-toggle matSuffix [for]="date"></mat-datepicker-toggle>
-            <mat-datepicker #date></mat-datepicker>
-        </mat-form-field>
-
-        <div>
-            <ng-container *ngIf="
-        formGroup.controls.transferDate.touched &&
-        !formGroup.controls.transferDate.value
-      ">
-                <span class="error">Date is Required</span>
-            </ng-container>
-        </div>
-
-
         <!-- Description start -->
         <mat-form-field>
             <mat-label>Description</mat-label>
@@ -46,12 +27,13 @@
         <!-- Amount start -->
         <mat-form-field>
             <mat-label>Amount</mat-label>
-            <input matInput formControlName="amount" type="number" min="0" required />
+            <input matInput formControlName="amount" type="number"  required />
         </mat-form-field>
         <div>
             <ng-container *ngIf="
           formGroup.controls.amount.touched &&
-          !formGroup.controls.amount.value
+          !formGroup.controls.amount.value &&
+          !formGroup.controls.amount.errors.required
         ">
                 <span class="error">Amount Balance is Required</span>
 
@@ -82,7 +64,7 @@
         <div class="btn-update">
             <button mat-raised-button color="primary" [disabled]="!formGroup.valid || isShowLoader" type="submit">
                 <span *ngIf="!isShowLoader">
-                    {{ !this.data ? 'Save' : 'Update' }}
+                    {{ !this.data ? 'Save Transfer' : 'Update Transfer' }}
                 </span>
                 <mat-spinner *ngIf="isShowLoader" class="inline-loader" diameter="20"></mat-spinner>
             </button>
