--- a/frontend/src/app/layout/transfer/transfer.component.html
+++ b/frontend/src/app/layout/transfer/transfer.component.html
@@ -2,38 +2,22 @@
     <mat-spinner *ngIf="loader" class="loader" diameter="40"></mat-spinner>
     <div class="header">
         <div>
-            <!-- form date -->
-            <!-- <mat-form-field class="field-width margin" color="primary">
-                <mat-label>From Date</mat-label>
-                <input matInput [matDatepicker]="date" [max]="currentDate" required [(ngModel)]="fromDate">
-                <mat-datepicker-toggle matSuffix [for]="date"></mat-datepicker-toggle>
-                <mat-datepicker #date></mat-datepicker>
-            </mat-form-field> -->
-            <!-- to date -->
-            <!-- <mat-form-field class="field-width margin">
-                <mat-label>To date</mat-label>
-                <input matInput [matDatepicker]="date1" [max]="currentDate" required [(ngModel)]="toDate">
-                <mat-datepicker-toggle matSuffix [for]="date1"></mat-datepicker-toggle>
-                <mat-datepicker #date1></mat-datepicker>
-            </mat-form-field> -->
-
-            <mat-form-field appearance="fill">
-                <mat-label>Enter a date range</mat-label>
+            <!-- Select date range -->
+            <mat-form-field>
+                <mat-label>Select date range</mat-label>
                 <mat-date-range-input [rangePicker]="picker">
-                  <input matStartDate placeholder="Start date">
-                  <input matEndDate placeholder="End date">
+                    <input matStartDate [(ngModel)]="fromDate" placeholder="Start date">
+                    <input matEndDate [(ngModel)]="toDate" placeholder="End date">
                 </mat-date-range-input>
-                <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-date-range-picker #picker></mat-date-range-picker>
-              </mat-form-field>
+            </mat-form-field>
 
-
-            <!-- from user start -->
+            <!-- from user -->
             <mat-form-field class="field-width margin">
                 <mat-label>From User</mat-label>
                 <mat-select [(ngModel)]="fromUserId">
-                    <mat-option>From User</mat-option>
+                    <mat-option value="0">--Select--</mat-option>
                     <mat-option *ngFor="let user of users" [value]="user.id">
                         {{user.user_name}}
                     </mat-option>
@@ -44,7 +28,7 @@
                 <mat-label>To User </mat-label>
 
                 <mat-select [(ngModel)]="toUserId">
-                    <mat-option>To User</mat-option>
+                    <mat-option value="0">--Select--</mat-option>
                     <mat-option *ngFor="let user of users" [value]="user.id">
                         {{user.user_name}}
                     </mat-option>
@@ -58,9 +42,8 @@
             <button color="primary" class="margin btn" mat-raised-button (click)="getTransfer()">
                 Search
             </button>
-            <button color="primary" class="margin btn" mat-raised-button
-                (click)="tableParams.search = '';  getTransfer()">
-                <!-- tableParams.formUserId = ''; tableParams.toUserId = ''; -->
+            <button color="primary" class="margin btn" mat-raised-button (click)="clearSearch()">
+
                 Clear Search
             </button>
             <button color="primary" class="margin btn" mat-raised-button (click)="onAddNewUser()">
@@ -80,6 +63,12 @@
     <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="id"
             matSortDirection="asc">
+            <ng-container matColumnDef="transferId">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.transferId}}
+                </td>
+            </ng-container>
             <ng-container matColumnDef="transferDate">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Transfer Date</th>
                 <td mat-cell *matCellDef="let element">
