--- a/frontend/src/app/layout/transfer/transfer.component.html
+++ b/frontend/src/app/layout/transfer/transfer.component.html
@@ -2,8 +2,10 @@
     <mat-spinner *ngIf="loader" class="loader" diameter="40"></mat-spinner>
     <div class="header">
         <div>
+
             <!-- Select date range -->
-            <mat-form-field>
+            <mat-form-field class="field-width margin">
+                <mat-label>From User</mat-label>
                 <mat-label>Select date range</mat-label>
                 <mat-date-range-input [rangePicker]="picker">
                     <input matStartDate [(ngModel)]="fromDate" placeholder="Start date">
@@ -13,6 +15,7 @@
                 <mat-date-range-picker #picker></mat-date-range-picker>
             </mat-form-field>
 
+            <ng-container *ngIf="loggedInUserRole !== 'Employees'">
             <!-- from user -->
             <mat-form-field class="field-width margin">
                 <mat-label>From User</mat-label>
@@ -34,8 +37,9 @@
                     </mat-option>
                 </mat-select>
             </mat-form-field>
+        </ng-container>
+            <!-- search  -->
             <mat-form-field class="field-width margin">
-
                 <mat-label>Search...</mat-label>
                 <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getTransfer()">
             </mat-form-field>
@@ -43,7 +47,6 @@
                 Search
             </button>
             <button color="primary" class="margin btn" mat-raised-button (click)="clearSearch()">
-
                 Clear Search
             </button>
             <button color="primary" class="margin btn" mat-raised-button (click)="onAddNewUser()">
@@ -105,7 +108,6 @@
                             (click)="onApproved(element.transferId)">
                             <mat-icon aria-label="thumb_up">thumb_up</mat-icon>
                         </button>
-
                         <button *ngIf="element.isApproved" mat-icon-button class="green">
                             <mat-icon>check</mat-icon>
                         </button>
